--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
 <body>
 
+<!-- added scanlines overlay for sci-fi look -->
+<div id="scanlines"></div>
+
+<!-- NEUES LOGO OBEN RECHTS -->
+<div id="top-right-logo">
+    <img src="/images/grafik.png" alt="Eternal Conflict Logo">
+</div>
+
 <!-- HINTERGRUND -->
 <div id="background"></div>
 
@@ -54,7 +62,7 @@
     <!-- Social Links hinzugefügt -->
     <div class="section social-links">
         <a href="https://discord.gg/SDBtey8d4j" target="_blank" class="social-btn discord">
-            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"/></svg>
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.077.077 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"/></svg>
             Discord
         </a>
         <a href="https://infinity-gaming.myforum.community/forum/" target="_blank" class="social-btn forum">
@@ -90,37 +98,13 @@
         </div>
     </div>
 
-    <!-- Musik-Player hinzugefügt (Spotify-Style) -->
-    <div class="music-player">
-        <div class="music-info">
-            <span class="music-icon">♪</span>
-            <span class="music-title" id="music-title">Kein Song geladen</span>
-        </div>
-        <div class="music-controls">
-            <button class="music-btn" id="prev-btn" title="Vorheriger Song">
-                <svg viewBox="0 0 24 24" fill="currentColor"><path d="M6 6h2v12H6zm3.5 6l8.5 6V6z"/></svg>
-            </button>
-            <button class="music-btn play-btn" id="play-btn" title="Play/Pause">
-                <svg viewBox="0 0 24 24" fill="currentColor" id="play-icon"><path d="M8 5v14l11-7z"/></svg>
-            </button>
-            <button class="music-btn" id="next-btn" title="Nächster Song">
-                <svg viewBox="0 0 24 24" fill="currentColor"><path d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"/></svg>
-            </button>
-            <button class="music-btn" id="mute-btn" title="Stumm">
-                <svg viewBox="0 0 24 24" fill="currentColor" id="volume-icon"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
-            </button>
-        </div>
-        <div class="volume-slider">
-            <input type="range" id="volume" min="0" max="100" value="50">
-        </div>
-    </div>
 </div>
 
 <!-- ZENTRALE INFO -->
 <div id="center">
     <div id="logo">
-        <img src="logo1.png" class="logo-img active" alt="Logo 1">
-        <img src="logo2.png" class="logo-img" alt="Logo 2">
+        <img src="logo1.jpg" class="logo-img active" alt="Logo 1">
+        <img src="logo2.jpg" class="logo-img" alt="Logo 2">
     </div>
 
     <div id="loadingbox">
@@ -137,9 +121,6 @@
         Willkommen auf unserem Roleplay Server.
     </p>
 </div>
-
-<!-- Audio Element für Musik -->
-<audio id="music-audio" preload="auto"></audio>
 
 <script src="script.js"></script>
 </body>
