--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- NEUES LOGO OBEN RECHTS -->
 <div id="top-right-logo">
-    <img src="/images/grafik.png" alt="Eternal Conflict Logo">
+    <!-- simplified path to grafik.png for direct local usage -->
+    <img src="grafik.png" alt="Eternal Conflict Logo">
 </div>
 
 <!-- HINTERGRUND -->
@@ -28,7 +29,8 @@
         <span class="subtitle">Roleplay Server</span>
 
         <!-- STEAM AVATAR -->
-        <div class="avatar" id="avatar"></div>
+        <!-- simplified path to logo1.png for avatar placeholder -->
+        <div class="avatar" id="avatar" style="background-image: url('logo1.png');"></div>
 
     </div>
 
@@ -103,8 +105,9 @@
 <!-- ZENTRALE INFO -->
 <div id="center">
     <div id="logo">
-        <img src="logo1.jpg" class="logo-img active" alt="Logo 1">
-        <img src="logo2.jpg" class="logo-img" alt="Logo 2">
+        <!-- simplified paths to logo1.png and logo2.png -->
+        <img src="logo1.png" class="logo-img active" alt="Logo 1">
+        <img src="logo2.png" class="logo-img" alt="Logo 2">
     </div>
 
     <div id="loadingbox">
