--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 <!-- NEUES LOGO OBEN RECHTS -->
 <div id="top-right-logo">
-    <!-- simplified path to grafik.png for direct local usage -->
-    <img src="grafik.png" alt="Eternal Conflict Logo">
+    <img src="grafik.png" alt="Infinity Gaming Logo">
 </div>
 
 <!-- HINTERGRUND -->
