--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>RP Server – Loading</title>
+    <title>The Eternal Conflict – Loading</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,8 +24,8 @@
     <div class="profile">
 
         <!-- SERVER NAME -->
-        <h2 id="servername">RP SERVER</h2>
-        <span class="subtitle">Roleplay Server</span>
+        <h2 id="servername">The Eternal Conflict</h2>
+        <span class="subtitle">Infinity Gaming Community</span>
 
         <!-- STEAM AVATAR -->
         <!-- simplified path to logo1.png for avatar placeholder -->
@@ -35,8 +35,8 @@
 
     <div class="section">
         <h3>Server Infos</h3>
-        <p id="map">Map: Lädt...</p>
-        <p id="gamemode">Gamemode: Lädt...</p>
+        <p id="server-status">Status: Online</p>
+        <p id="player-count">Slots: 0 / 0</p>
     </div>
 
     <!-- Changelogs Bereich -->
