--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>The Eternal Conflict – Loading</title>
+    <!-- added Orbitron and Rajdhani fonts for a modern sci-fi look -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,12 +35,6 @@
         <!-- simplified path to logo1.png for avatar placeholder -->
         <div class="avatar" id="avatar" style="background-image: url('logo1.png');"></div>
 
-    </div>
-
-    <div class="section">
-        <h3>Server Infos</h3>
-        <p id="server-status">Status: Online</p>
-        <p id="player-count">Slots: 0 / 0</p>
     </div>
 
     <!-- Changelogs Bereich -->
