--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 
 <body>
 
+<!-- added terminal decoration elements -->
+<div class="terminal-corner top-left"></div>
+<div class="terminal-corner bottom-right"></div>
+
 <!-- added scanlines overlay for sci-fi look -->
 <div id="scanlines"></div>
 
-<!-- NEUES LOGO OBEN RECHTS -->
-<div id="top-right-logo">
-    <img src="grafik.png" alt="Infinity Gaming Logo">
+<!-- added top-right-panel wrapper for cleaner look -->
+<div id="top-right-panel">
+    <div id="top-right-logo">
+        <img src="grafik.png" alt="Infinity Gaming Logo">
+    </div>
 </div>
 
 <!-- HINTERGRUND -->
