--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <!-- added scanlines overlay for sci-fi look -->
 <div id="scanlines"></div>
 
+<!-- Added cursor element to ensure visibility in GMod -->
+<div id="custom-cursor"></div>
+
 <!-- added top-right-panel wrapper for cleaner look -->
 <div id="top-right-panel">
     <div id="top-right-logo">
