--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
     <div id="top-right-logo">
         <img src="grafik.png" alt="Infinity Gaming Logo">
     </div>
+    <!-- Added Hologram container below the top-right logo panel -->
+    <div id="hologram-container">
+        <div class="hologram-projection">
+            <div class="hologram-character sith active">
+                <img src="logo1.png" alt="Sith Projection">
+            </div>
+            <div class="hologram-character jedi">
+                <img src="logo2.png" alt="Jedi Projection">
+            </div>
+            <div class="hologram-beam"></div>
+        </div>
+        <div class="hologram-message">
+            <p id="hologram-text">Initialisierung...</p>
+        </div>
+    </div>
 </div>
 
 <!-- HINTERGRUND -->
