--- a/index.html
+++ b/index.html
@@ -27,21 +27,6 @@
     <div id="top-right-logo">
         <img src="grafik.png" alt="Infinity Gaming Logo">
     </div>
-    <!-- Added Hologram container below the top-right logo panel -->
-    <div id="hologram-container">
-        <div class="hologram-projection">
-            <div class="hologram-character sith active">
-                <img src="logo1.png" alt="Sith Projection">
-            </div>
-            <div class="hologram-character jedi">
-                <img src="logo2.png" alt="Jedi Projection">
-            </div>
-            <div class="hologram-beam"></div>
-        </div>
-        <div class="hologram-message">
-            <p id="hologram-text">Initialisierung...</p>
-        </div>
-    </div>
 </div>
 
 <!-- HINTERGRUND -->
@@ -137,6 +122,22 @@
         </div>
         <p id="status">Verbinde mit Server...</p>
         <p id="download-info">Warte auf Download-Informationen...</p>
+    </div>
+</div>
+
+<!-- Moved Hologram container to the bottom right and updated character images -->
+<div id="hologram-container">
+    <div class="hologram-projection">
+        <div class="hologram-character sith active">
+            <img src="sith.png" alt="Sith Projection">
+        </div>
+        <div class="hologram-character jedi">
+            <img src="jedi.png" alt="Jedi Projection">
+        </div>
+        <div class="hologram-beam"></div>
+    </div>
+    <div class="hologram-message">
+        <p id="hologram-text">Empfange Übertragung...</p>
     </div>
 </div>
 
