--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="section changelogs">
         <h3>CHANGELOGS</h3>
         <div class="changelog-item">
-            <p class="changelog-title">+ Neues Feature hinzugefügt</p>
-            <p class="changelog-meta">Admin · 24.12.2024, 18:00</p>
+            <p class="changelog-title">+ Custom Map hinzugefügt</p>
+            <p class="changelog-meta">Game-Design · 25.12.2024, 18:00</p>
         </div>
         <div class="changelog-item">
             <p class="changelog-title">Bugfix: Spawn-Problem behoben</p>
