--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
     </div>
 </div>
 
+<!-- Added hidden audio elements for background music -->
+<div id="audio-container" style="display: none;">
+    <audio id="audio-sith" loop preload="auto">
+        <source src="SWTOR KotET Soundtrack - Tenebrae (All Versions Extended).mp3" type="audio/mpeg">
+    </audio>
+    <audio id="audio-jedi" loop preload="auto">
+        <source src="Star Wars The Old Republic Theme (Clash of Destiny) EPIC VERSION.mp3" type="audio/mpeg">
+    </audio>
+</div>
+
 <div id="infobox">
     <p id="infotext">
         Willkommen auf unserem Roleplay Server.
