--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 
 <!-- Added hidden audio elements for background music -->
 <div id="audio-container" style="display: none;">
-    <audio id="audio-sith" loop preload="auto">
-        <source src="SWTOR KotET Soundtrack - Tenebrae (All Versions Extended).mp3" type="audio/mpeg">
+    <audio id="audio-sith" loop preload="auto" crossorigin="anonymous">
+        <source src="sith.mp3" type="audio/mpeg">
     </audio>
-    <audio id="audio-jedi" loop preload="auto">
-        <source src="Star Wars The Old Republic Theme (Clash of Destiny) EPIC VERSION.mp3" type="audio/mpeg">
+    <audio id="audio-jedi" loop preload="auto" crossorigin="anonymous">
+        <source src="jedi.mp3" type="audio/mpeg">
     </audio>
 </div>
 
